<resources>
    <string name="app_name">Technical Challenge</string>

    <!-- Login Screen -->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>

    <!-- Register Screen -->
    <string name="age">Age</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- Errors -->
    <string name="login_error">Email or Password is incorrect</string>
    <string name="register_error">User already exists</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Password must be between 6 and 12 character long</string>
    <string name="invalid_age">Age must be between 18 and 99 years old</string>

    <!-- Image Details -->
    <string name="image_size">Image Size:</string>
    <string name="image_type">Image Type:</string>
    <string name="image_Tags">Image Tags:</string>
    <string name="uploader_name">Image Uploader Name:</string>
    <string name="views">Views:</string>
    <string name="likes">Likes:</string>
    <string name="comments">Comments:</string>
    <string name="favorites">Favorites:</string>
    <string name="downloads">Downloads:</string>
</resources>