<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_details_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <LinearLayout
            android:id="@+id/linearlayout_uploader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_uploader_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploader_name" />

            <TextView
                android:id="@+id/textview_uploader_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_padding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_uploader">

            <TextView
                android:id="@+id/textview_views_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/views" />

            <TextView
                android:id="@+id/textview_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_padding"
                app:layout_constraintStart_toEndOf="@+id/textview_views_label"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_likes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_views">

            <TextView
                android:id="@+id/textview_likes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes" />

            <TextView
                android:id="@+id/textview_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_padding" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_likes">

            <TextView
                android:id="@+id/textview_comments_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments" />

            <TextView
                android:id="@+id/textview_commments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_padding"
                app:layout_constraintStart_toEndOf="@+id/textview_comments_label"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_downloads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_comments">


            <TextView
                android:id="@+id/textview_downloads_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloads" />

            <TextView
                android:id="@+id/textview_downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_padding" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/toolbar_image"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:alpha="0"
        android:contentDescription="@null"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_top_details_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_image">

        <LinearLayout
            android:id="@+id/linearlayout_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_size" />

            <TextView
                android:id="@+id/textview_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_padding" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_size">

            <TextView
                android:id="@+id/textview_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_type" />

            <TextView
                android:id="@+id/textview_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_padding"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_type">

            <TextView
                android:id="@+id/textview_tags_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_Tags" />

            <TextView
                android:id="@+id/textview_tags"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/page_padding"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_image" />

</androidx.constraintlayout.motion.widget.MotionLayout>